// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList should render correctly with active loading 1`] = `
<div
  className="task-list"
>
  <Unknown
    deleteTask={[Function]}
    items={Array []}
    loading={true}
    updateTask={[Function]}
  />
</div>
`;

exports[`TaskList should render correctly with inactive loading 1`] = `
<div
  className="task-list"
>
  <Unknown
    deleteTask={[Function]}
    items={
      Array [
        Object {
          "description": "A description",
          "id": 1,
          "title": "A title",
        },
      ]
    }
    loading={false}
    updateTask={[Function]}
  />
</div>
`;
